--- a/chatbot/Main_File-1.ipynb
+++ b/chatbot/Main_File-1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -10,10 +10,10 @@
      "output_type": "stream",
      "text": [
       "[nltk_data] Downloading package punkt to\n",
-      "[nltk_data]     C:\\Users\\aloky\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]     C:\\Users\\LENOVO\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package punkt is already up-to-date!\n",
       "[nltk_data] Downloading package wordnet to\n",
-      "[nltk_data]     C:\\Users\\aloky\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]     C:\\Users\\LENOVO\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package wordnet is already up-to-date!\n"
      ]
     }
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,12 +263,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "from tensorflow.keras import models\n",
-    "model = models.load_model('C://Users//aloky//OneDrive//Desktop//Semi-Ruled-Chatbot-Capstone-Project//model.h5')\n"
+    "model = models.load_model(r\"C:\\Users\\LENOVO\\Downloads\\chatbot\\model.h5\")\n"
    ]
   },
   {
@@ -280,19 +282,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "text_to_tensor() missing 1 required positional argument: 'max_length'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[90], line 74\u001b[0m\n\u001b[0;32m     71\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m output\n\u001b[0;32m     73\u001b[0m \u001b[38;5;66;03m# Example usage\u001b[39;00m\n\u001b[1;32m---> 74\u001b[0m output_prediction \u001b[38;5;241m=\u001b[39m \u001b[43mprediction\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     75\u001b[0m \u001b[38;5;28mprint\u001b[39m(output_prediction)  \u001b[38;5;66;03m# Print or use the output as needed\u001b[39;00m\n",
-      "Cell \u001b[1;32mIn[90], line 56\u001b[0m, in \u001b[0;36mprediction\u001b[1;34m()\u001b[0m\n\u001b[0;32m     53\u001b[0m data \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m.\u001b[39mjoin(data_list)\n\u001b[0;32m     55\u001b[0m \u001b[38;5;66;03m# Use the text_to_tensor function\u001b[39;00m\n\u001b[1;32m---> 56\u001b[0m tensor_x \u001b[38;5;241m=\u001b[39m \u001b[43mtext_to_tensor\u001b[49m\u001b[43m(\u001b[49m\u001b[43mdata\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m3173\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43munk_token\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m__UNK__\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mverbose\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mFalse\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[0;32m     58\u001b[0m \u001b[38;5;66;03m# Rest of your code...\u001b[39;00m\n\u001b[0;32m     59\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mtensorflow\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mkeras\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpreprocessing\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msequence\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m pad_sequences\n",
-      "\u001b[1;31mTypeError\u001b[0m: text_to_tensor() missing 1 required positional argument: 'max_length'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 3s 3s/step\n",
+      "4\n"
      ]
     }
    ],
@@ -352,7 +350,7 @@
     "    data = ' '.join(data_list)\n",
     "\n",
     "    # Use the text_to_tensor function\n",
-    "    tensor_x = text_to_tensor(data, 3173, unk_token='__UNK__', verbose=False)\n",
+    "    tensor_x = text_to_tensor(data, 3173, 100, unk_token='__UNK__', verbose=False)  # Provide max_length argument\n",
     "\n",
     "    # Rest of your code...\n",
     "    from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
@@ -383,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,9 +471,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "''"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "base = Tk()\n",
     "base.title(\"IBot\")\n",
@@ -486,7 +495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,13 +514,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1/1 [==============================] - 0s 82ms/step\n"
+     ]
+    }
+   ],
    "source": [
-    "\n",
     "#Bind scrollbar to Chat window\n",
     "scrollbar = Scrollbar(base, command=ChatLog.yview, cursor=\"heart\")\n",
     "ChatLog['yscrollcommand'] = scrollbar.set\n",
@@ -533,8 +549,36 @@
     "SendButton.place(x=6, y=401, height=90)\n",
     "\n",
     "\n",
-    "base.mainloop()\n"
+    "base.mainloop()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
